refactor: reorganizing folders and saving locally to a zip download